Fix remove button alignment and size

--- a/app/webFrontend/src/app/unit/unit-form/task-unit-edit/task-unit-edit.component.scss
+++ b/app/webFrontend/src/app/unit/unit-form/task-unit-edit/task-unit-edit.component.scss
@@ -39,6 +39,9 @@
       }
       .remove {
         min-width: min-content;
+        height: 36px; // height of mat button
+        margin-top: 0.75rem;
+        margin-left: 0.3rem;
       }
     }
 
